# agent-wrapper

./: PRD.md  README.md  pyproject.toml
agent-framework/src/agent_wrapper/: graph.py  tools.py
src/agent_wrapper/: graph.py  main.py  memory.py  optimizer.py  orchestrator.py
video-agent/: LIVEPORTRAIT_SETUP.md  pyproject.toml
video-agent/src/video_agent/: graph.py  main.py  ui.py
