[tool.poetry]
name = "agent-wrapper"
version = "0.1.0"
description = "A unified Multi-Agent Coding Framework for Local and Cloud LLMs"
authors = ["Clawdy McClawd <clawdy@arpi4.local>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langgraph = "^0.0.1"
litellm = "^1.25.0"
pydantic = "^2.6.0"
typer = "^0.9.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
onecontext = "^0.0.1"
llmlingua = "^0.2.2"
dspy-ai = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
