[tool.poetry]
name = "video-agent"
version = "0.1.0"
description = "Agentic Framework for Local Video Generation (Flux/LoRA/LivePortrait)"
authors = ["Clawdy McClawd <clawdy@arpi4.local>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0"
diffusers = "^0.26.0"
transformers = "^4.36.0"
liveportrait = "^0.0.1"
accelerate = "^0.26.0"
opencv-python = "^4.9.0"
langchain = "^0.1.0"
langgraph = "^0.0.1"
litellm = "^1.25.0"
typer = "^0.9.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
